Fixed overall app alignment

--- a/src/Traace.scss
+++ b/src/Traace.scss
@@ -62,7 +62,7 @@ input{
 #root{
     background-color: var(--background);
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
     height: 100vh;
     width: 100vw;
